# zcompiler

./: .gitignore  CMakeLists.txt  README.md  arch.avg  arch.md  arch_cn.md  engineering_rules.md  known_issue.md  plan.md  progress.md
benchmarks/vector_add/: README.md  reference_rvv.c  reference_scalar.c  run.sh
docs/: accelerator-profile.md  ai-workflow.md  benchmark-workflow.md  correctness-testing.md  current-capabilities.md  phase17-functions-memory.md  phase18-vector-syntax.md  phase19-vector-mlir.md  phase20-rvv-lowering.md  phase20c-formal-rvv-lowering.md  phase25-vector-kernels.md  phase25c-vector-reduction.md  phase26-rvv-toolchain.md  phase26b-riscv-llvm-build.md  phase28b-print-i32.md  phase28c-qemu-rvv-execution.md  phase29b-source-element-width-contract.md  phase30a-vector-mul.md  phase30b-qemu-manifest.md  phase30c-qemu-kernel-descriptors.md  phase30d-signed-i32-semantics.md  phase30e-i32-wrapping-semantics.md  phase30f-scalar-i32-wrapping.md  phase30g-qemu-harness-generator.md  phase30h-qemu-check-templates.md  phase30i-vector-compare-select-design.md  phase30j-vector-select-gt.md  phase30k-vector-select-predicates.md  phase30l-signed-select-predicates.md  phase30m-unsigned-select-predicates.md  phase30n-mask-architecture.md  phase30o-masked-add.md  phase30p-mask-predicates.md  phase30q-masked-arithmetic.md  phase30r-masked-store.md  phase30s-masked-load.md  phase31t-mma.md  phase31u-packed-b.md  phase31v-compiler-owned-pack-b.md  phase32-33-sew-lmul.md  (+14 more)
examples/: arrays.zc  calls.zc  complex_vector_pipeline.zc  control.zc  current_max_demo.zc  hello.zc  matrix_multiply.zc  matrix_multiply_packed_b.zc  matrix_pack_b_then_multiply.zc  print_i32.zc  scalar_i32_wrap.zc  vector_add.zc  vector_add_i16.zc  vector_add_i16_m2.zc  vector_add_i16_m4.zc  vector_add_i64.zc  vector_add_i8.zc  vector_copy.zc  vector_copy_i64.zc  vector_copy_i8.zc  vector_indexed_load.zc  vector_indexed_store.zc  vector_mask_logical.zc  vector_masked_add_eq.zc  vector_masked_add_ge.zc  vector_masked_add_gt.zc  vector_masked_add_le.zc  vector_masked_add_lt.zc  vector_masked_add_ne.zc  vector_masked_add_uge.zc  vector_masked_add_ugt.zc  vector_masked_add_ule.zc  vector_masked_add_ult.zc  vector_masked_indexed_load.zc  vector_masked_indexed_store.zc  vector_masked_load_gt.zc  vector_masked_mul_gt.zc  vector_masked_store_gt.zc  vector_masked_strided_load.zc  vector_masked_strided_store.zc  (+32 more)
experiments/: README.md
experiments/prompts/: README.md  TEMPLATE.md  vector_add_rvv_001.md  vector_kernel_surface_001.md
experiments/results/: vector_add_rvv_001.md  vector_kernel_surface_001.md
include/: CMakeLists.txt
lib/: CMakeLists.txt
lib/AST/: AST.cpp  CMakeLists.txt
lib/CodeGen/: CMakeLists.txt  CodeGen.cpp
lib/Conversion/: CMakeLists.txt
lib/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
lib/MLIRGen/: CMakeLists.txt  MLIRGen.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
profiles/: README.md  rvv-compliance-matrix.json  rvv-default.json
scripts/: check-rvv-toolchain.sh  generate-rvv-compliance.py  prepare-riscv-llvm-build.sh  probe-formal-rvv-lowering.sh
test/: CMakeLists.txt
test/codegen/: arrays.ll  arrays.mlir  arrays.riscv  calls.ll  calls.mlir  calls.riscv  control.ll  hello.ll  hello.lowered.mlir  hello.mlir  hello.riscv  hello.zc.mlir  matrix_multiply.mlir  matrix_multiply.riscv  matrix_multiply_packed_b.mlir  matrix_multiply_packed_b.riscv  matrix_pack_b_then_multiply.riscv  print_i32.riscv  run.sh  scalar_i32_wrap.riscv  vector_add.err  vector_add.mlir  vector_add.riscv  vector_add_i16.riscv  vector_add_i16_m2.riscv  vector_add_i16_m4.riscv  vector_add_i64.riscv  vector_add_i8.riscv  vector_copy.mlir  vector_copy.riscv  vector_copy_i64.riscv  vector_copy_i8.riscv  vector_indexed_load.riscv  vector_indexed_store.riscv  vector_mask_logical.riscv  vector_masked_add_eq.mlir  vector_masked_add_eq.riscv  vector_masked_add_ge.mlir  vector_masked_add_ge.riscv  vector_masked_add_gt.mlir  (+71 more)
test/correctness/: run.sh  vector_add_host.py  vector_copy_host.py  vector_masked_add_gt_host.py  vector_masked_add_predicates_host.py  vector_masked_arithmetic_gt_host.py  vector_masked_load_gt_host.py  vector_masked_store_gt_host.py  vector_mul_host.py  vector_reduce_add_host.py  vector_scale_host.py  vector_select_eq_host.py  vector_select_ge_host.py  vector_select_gt_host.py  vector_select_le_host.py  vector_select_lt_host.py  vector_select_ne_host.py  vector_select_uge_host.py  vector_select_ugt_host.py  vector_select_ule_host.py  vector_select_ult_host.py
test/dialect/: lowered.mlir  registered.mlir  run.sh
test/lexer/: arrays.tokens  calls.tokens  hello.tokens  invalid.err  invalid.zc  matrix_multiply.tokens  matrix_multiply_packed_b.tokens  matrix_pack_b_then_multiply.tokens  print_i32.tokens  run.sh  vector_add.tokens  vector_add_i16.tokens  vector_add_i16_m2.tokens  vector_add_i16_m4.tokens  vector_add_i64.tokens  vector_add_i8.tokens  vector_copy.tokens  (+53 more)
tools/zc/: CMakeLists.txt  zc.cpp
(+101 files in other folders)
